--- a/src/main/resources/fxml/BigDataLoader.fxml
+++ b/src/main/resources/fxml/BigDataLoader.fxml
@@ -64,8 +64,8 @@
             </Label>
             <Label layoutX="21.0" layoutY="37.0" text="domain" />
             <TextField id="mysqlDomain" fx:id="mysqlDomain" layoutX="84.0" layoutY="32.0" prefHeight="27.0" prefWidth="117.0" promptText="localhost" text="localhost" />
-            <Label layoutX="21.0" layoutY="67.0" text="port" />
-            <TextField id="port" fx:id="port" layoutX="84.0" layoutY="62.0" prefHeight="27.0" prefWidth="117.0" promptText="3306" text="3306" />
+            <Label layoutX="21.0" layoutY="67.0" text="hdfsPort" />
+            <TextField id="hdfsPort" fx:id="hdfsPort" layoutX="84.0" layoutY="62.0" prefHeight="27.0" prefWidth="117.0" promptText="3306" text="3306" />
             <Label layoutX="248.0" layoutY="11.0" prefHeight="22.0" prefWidth="57.0" text="HDFS" textAlignment="CENTER">
                <font>
                   <Font name="Times New Roman Bold" size="14.0" />
@@ -73,8 +73,8 @@
             </Label>
             <Label layoutX="231.0" layoutY="36.0" text="domean" />
             <TextField id="hdfsDomain" fx:id="hdfsDomain" layoutX="290.0" layoutY="31.0" prefHeight="27.0" prefWidth="117.0" promptText="localhost" text="localhost" />
-            <Label layoutX="231.0" layoutY="66.0" text="port" />
-            <TextField id="port" fx:id="port" layoutX="290.0" layoutY="61.0" prefHeight="27.0" prefWidth="117.0" promptText="8020" text="8020" />
+            <Label layoutX="231.0" layoutY="66.0" text="hdfsPort" />
+            <TextField id="hdfsPort" fx:id="hdfsPort" layoutX="290.0" layoutY="61.0" prefHeight="27.0" prefWidth="117.0" promptText="8020" text="8020" />
             <Label layoutX="21.0" layoutY="97.0" text="user" />
             <TextField id="user" fx:id="user" layoutX="84.0" layoutY="92.0" prefHeight="27.0" prefWidth="117.0" promptText="root" text="vladimir" />
             <Label layoutX="21.0" layoutY="127.0" text="password" />
